--- a/Bios.html
+++ b/Bios.html
@@ -51,9 +51,9 @@ aside{
   </section>
   <section>
     <ul>
-     <li></li>
-      <li></li>
-      <li></li>
+     <li>Team Member: Skyler Benson</li>
+      <li>Major: CIS</li>
+      <li>Expected Role: Developer</li>
      </ul>
   </section>
   <section>
