--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1>hi</h1>
-<h1>hi</h1>
+
+<a href="Bios.html">Team Bios</a>
+<p> | </p>
+<a href="SystemsDesign.html">System Designs and Prototypes</a>
