--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
-<a href="Bios.html">Team Bios</a>
-<p> | </p>
-<a href="SystemsDesign.html">System Designs and Prototypes</a>
+<h1>Story Analyzer Proposal</h1>
+<p><a href="">Bios</a></p>
+<p><a href="">System Designs</a></p>
