--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Story Analyzer Proposal</h1>
-<p><a href="">Bios</a></p>
-<p><a href="">System Designs</a></p>
+<p><a href="">Bios.html</a></p>
+<p><a href="">SystemDesigns.html</a></p>
