--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Story Analyzer Proposal</h1>
-<p><a href="Bios.html">Bios</a></p>
-<p><a href="SystemDesigns.html">System Designs</a></p>
+<p>cis-smad-1.github.io/Bios.html</p>
+
