--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Story Analyzer Proposal</h1>
-<p>cis-smad-1.github.io/Bios.html</p>
+<p><a href=https://cis-smad-1.github.io/Bios.html">Bios</a></p>
 
