--- a/Bios.html
+++ b/Bios.html
@@ -59,9 +59,9 @@ aside{
   </section>
   <section>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Team Member: Anna Bonner</li>
+      <li>Major: Interactive Design</li>
+      <li>Expected Role: Graphic Designer and User Experience</li>
      </ul>
   </section>
   <section>
