--- a/Bios.html
+++ b/Bios.html
@@ -66,9 +66,9 @@ aside{
   </section>
   <section>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Team Member: Toriana Rollins</li>
+      <li>Major: Interactive Design</li>
+      <li>Expected Role: Visual Design, Media Production</li>
      </ul>
   </section>
   <section>
