--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -16,7 +16,17 @@
     <h1>Systems Designs and Prototypes</h1>
   </header>
   <section>
-    
+	  <h3>Overview</h3>
+	  <p>Create an information system that will support the requirements in order to create 
+		  a functional and aesthetically pleasing story analyzer website</p>
+	  <h3>Major Project Goals</h3>
+	  <ul>
+		  <li>Updated Documentation</li>
+		  <li>All source code for the interfaces and processed in the correct order</li>
+		  <li>Well-formatted and professional</li>
+		  <li>Documentation on how to set up and use the finished systems</li>
+	  </ul>
+	  <h3>Obstacles / Potential Technical Issues</h3>
   </section>
 </body>
 </html>
