--- a/Bios.html
+++ b/Bios.html
@@ -73,9 +73,9 @@ aside{
   </section>
   <section>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Team Member: Jenna Johnson</li>
+      <li>Major: Interactive Design</li>
+      <li>Expected Role: Writing and editing, UX</li>
      </ul>
   </section>
   <section>
