--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -27,6 +27,17 @@
 		  <li>Documentation on how to set up and use the finished systems</li>
 	  </ul>
 	  <h3>Obstacles / Potential Technical Issues</h3>
+	  <p>SMAD</p>
+	  <ul>
+		  <li>Displaying the Graphics</li>
+		  <li>Making the UX accessible to users</li>
+		  <li>Fitting the information in the screen width</li>
+	  </ul>
+	  <p>CIS</p>
+	  <ul>
+		  <li>Coding something that we have no experience with</li>
+	  </ul>
+	  <h3>Audience(Personas)</h3>
   </section>
 </body>
 </html>
