--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+
+<!DOCTYPE HTML>
+<html lang="en">
+
 <h1>Story Analyzer Proposal</h1>
 <a href="cis-smad-1.github.io/Bios.html">Team Member Bios</a>
 
