--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -38,6 +38,20 @@
 		  <li>Coding something that we have no experience with</li>
 	  </ul>
 	  <h3>Audience(Personas)</h3>
+	  <h5>Given Audience:  Researchers, historians, reporters, journalists, professors</h5>
+	  <ul>
+		  <li>Persona 1: Grad Student (22-28)</li>
+		  <ul>
+			  <li>Goals: Finding information quickly in research</li>
+			  <li>Frustrations: Having to go to multiple websites to find documents, looking for keywords</li>
+		  </ul>
+		  <li>Persona 2: Lawyer (30-70)</li>
+		  <ul>
+			  <li>Goals: Analyzing law documents</li>
+			  <li>Frustrations: Having to go to multiple sources for documents, not being able to find specific cases, 
+				  looking for keywords, finding people’s names</li>
+		  </ul>
+	  </ul>
   </section>
 </body>
 </html>
