--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html lang="en">
 
 <h1>Story Analyzer Proposal</h1>
-<a href="cis-smad-1.github.io/Bios.html">Team Member Bios</a>
+<a href="Bios.html">Team Member Bios</a>
 
