--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<h1>Story Analyzer Proposal</h1>
-<a href="Bios.html">Team Member Bios</a>
+<Head>
+<meta charset="utf-8">
+
+</head>
+
+<body>
+  <h1>Story Analyzer Proposal</h1>
+  <a href="Bios.html">Team Member Bios</a>
+</body>
+</html>
+  
+  
+  
 
