--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -45,6 +45,7 @@
 			  <li>Goals: Finding information quickly in research</li>
 			  <li>Frustrations: Having to go to multiple websites to find documents, looking for keywords</li>
 		  </ul>
+		  </br>
 		  <li>Persona 2: Lawyer (30-70)</li>
 		  <ul>
 			  <li>Goals: Analyzing law documents</li>
@@ -52,6 +53,15 @@
 				  looking for keywords, finding people’s names</li>
 		  </ul>
 	  </ul>
+	<h3>Timeline (with milestones for deliverables)</h3>
+	<ul>
+		<li>October 4th Sprint 1 Deliverable: Written Proposals and concepts</li>
+		<li>October 19th Sprint 1: All deliverables due by 5pm</li>
+		<li>November 11th Sprint 2: deliverables due by 5pm</li>
+		<li>November 30th Sprint 3: deliverables due by 5pm (Has to be completely functional)</li>
+		<li>December 4th Final Presentations</li>
+	</ul>
+	<h3>UX Research/ Testing</h3>
   </section>
 </body>
 </html>
