--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Story Analyzer Proposal</h1>
   <a href="Bios.html">Team Member Bios</a>
+  <a href="SystemsDesigns.html">Systems Designs</a>
 </body>
 </html>
   
