--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -62,6 +62,18 @@
 		<li>December 4th Final Presentations</li>
 	</ul>
 	<h3>UX Research/ Testing</h3>
+	<ul>
+		<li>We will be conducting interviews with non-users with no prior knowledge of the site and asking them to perform a series of 
+			tasks with no/ minimal guidance. The questions and tasks we will ask of the interviewees will be as follows:</li>
+		<ul>
+			<li>Locate the Trump Tower Moscow Project pages from the Mueller Report.</li>
+			<li>Find the amount of times the word “investigation” appears in the House Impeachment Report- Exec Summary Section 1.</li>
+			<li>What date is mentioned the most in the House Impeachment Report- Exec Summary Section 1?</li>
+			<li>In what line is Rudy Guiliani’s name first mentioned in the House Impeachment Report- Exec Summary Section 1?</li>
+		</ul>
+		<li>The people being interviewed will be asked to think out loud and vocalize all frustrations they face throughout their experience using story 
+			analyzer. This will ensure that we will be able to understand where exactly the frustrations lie and what the needs of the user are.</li>
+	</ul>
   </section>
 </body>
 </html>
