--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
   <h1>Story Analyzer Proposal</h1>
-  <a href="Bios.html">Team Member Bios</a>
-  <a href="SystemsDesigns.html">Systems Designs</a>
+  <p><a href="Bios.html">Team Member Bios</a></p>
+  <p><a href="SystemsDesigns.html">Systems Designs</a></p>
 </body>
 </html>
   
