--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -16,6 +16,7 @@
     <h1>Systems Designs and Prototypes</h1>
   </header>
   <section>
+	  <h2>Basic Requirements</h2>
 	  <h3>Overview</h3>
 	  <p>Create an information system that will support the requirements in order to create 
 		  a functional and aesthetically pleasing story analyzer website</p>
@@ -61,6 +62,10 @@
 		<li>November 30th Sprint 3: deliverables due by 5pm (Has to be completely functional)</li>
 		<li>December 4th Final Presentations</li>
 	</ul>
+  </section>
+<section>
+	<h2>Advanced Requirements</h2>
+	<h3>Visual Samples</h3>
 	<h3>UX Research/ Testing</h3>
 	<ul>
 		<li>We will be conducting interviews with non-users with no prior knowledge of the site and asking them to perform a series of 
@@ -74,6 +79,14 @@
 		<li>The people being interviewed will be asked to think out loud and vocalize all frustrations they face throughout their experience using story 
 			analyzer. This will ensure that we will be able to understand where exactly the frustrations lie and what the needs of the user are.</li>
 	</ul>
-  </section>
+	<h3>UX Wireframes / prototypes</h3>
+	<h3>System Planning / Documentation (Use Case, Updated ERD, Flow Diagrams)</h3>
+	<h3>Project Management (Communication method, Traceability Matrix)</h3>
+	<ul>
+		<li>Groupme</li>
+		<li>Github</li>
+		<li>Zoom</li>
+	</ul>
+</section>
 </body>
 </html>
