--- a/index.html
+++ b/index.html
@@ -10,6 +10,76 @@
   <h1>Story Analyzer Proposal</h1>
   <p><a href="Bios.html">Team Member Bios</a></p>
   <p><a href="SystemsDesigns.html">Systems Designs</a></p>
+    <section>
+	  <h2>Basic Requirements</h2>
+	  <h3>Overview</h3>
+	  <p>Create an information system that will support the requirements in order to create 
+		  a functional and aesthetically pleasing story analyzer website</p>
+	  <h3>Major Project Goals</h3>
+	  <ul>
+		  <li>Updated Documentation</li>
+		  <li>All source code for the interfaces and processed in the correct order</li>
+		  <li>Well-formatted and professional</li>
+		  <li>Documentation on how to set up and use the finished systems</li>
+	  </ul>
+	  <h3>Obstacles / Potential Technical Issues</h3>
+	  <p>SMAD</p>
+	  <ul>
+		  <li>Displaying the Graphics</li>
+		  <li>Making the UX accessible to users</li>
+		  <li>Fitting the information in the screen width</li>
+	  </ul>
+	  <p>CIS</p>
+	  <ul>
+		  <li>Coding something that we have no experience with</li>
+	  </ul>
+	  <h3>Audience(Personas)</h3>
+	  <h5>Given Audience:  Researchers, historians, reporters, journalists, professors</h5>
+	  <ul>
+		  <li>Persona 1: Grad Student (22-28)</li>
+		  <ul>
+			  <li>Goals: Finding information quickly in research</li>
+			  <li>Frustrations: Having to go to multiple websites to find documents, looking for keywords</li>
+		  </ul>
+		  </br>
+		  <li>Persona 2: Lawyer (30-70)</li>
+		  <ul>
+			  <li>Goals: Analyzing law documents</li>
+			  <li>Frustrations: Having to go to multiple sources for documents, not being able to find specific cases, 
+				  looking for keywords, finding people’s names</li>
+		  </ul>
+	  </ul>
+	<h3>Timeline (with milestones for deliverables)</h3>
+	<ul>
+		<li>October 4th Sprint 1 Deliverable: Written Proposals and concepts</li>
+		<li>October 19th Sprint 1: All deliverables due by 5pm</li>
+		<li>November 11th Sprint 2: deliverables due by 5pm</li>
+		<li>November 30th Sprint 3: deliverables due by 5pm (Has to be completely functional)</li>
+		<li>December 4th Final Presentations</li>
+	</ul>
+  </section>
+<section>
+	<h2>Advanced Requirements</h2>
+	<h3>UX Research/ Testing</h3>
+	<ul>
+		<li>We will be conducting interviews with non-users with no prior knowledge of the site and asking them to perform a series of 
+			tasks with no/ minimal guidance. The questions and tasks we will ask of the interviewees will be as follows:</li>
+		<ul>
+			<li>Locate the Trump Tower Moscow Project pages from the Mueller Report.</li>
+			<li>Find the amount of times the word “investigation” appears in the House Impeachment Report- Exec Summary Section 1.</li>
+			<li>What date is mentioned the most in the House Impeachment Report- Exec Summary Section 1?</li>
+			<li>In what line is Rudy Guiliani’s name first mentioned in the House Impeachment Report- Exec Summary Section 1?</li>
+		</ul>
+		<li>The people being interviewed will be asked to think out loud and vocalize all frustrations they face throughout their experience using story 
+			analyzer. This will ensure that we will be able to understand where exactly the frustrations lie and what the needs of the user are.</li>
+	</ul>
+	<h3>Project Management (Communication method, Traceability Matrix)</h3>
+	<ul>
+		<li>Groupme</li>
+		<li>Github</li>
+		<li>Zoom</li>
+	</ul>
+</section>
 </body>
 </html>
   
