--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
 		<li>Github</li>
 		<li>Zoom</li>
 	</ul>
+	<h3>Meeting Agenda for Sprint 1</h3>
+	<ul>
+		<li>Be able to show the client the updated user interface.</li>
+		<li>Allow ⅓ functionality of site</li>
+		<li>Make sure there are no errors in code</li>
+		<li>Plan major next steps</li>
+		<li>Instructor will give particular times to meet via zoom</li>
+	</ul>
+	<h3>Zoom recording (with a dry run of your team introductions - Enable sharing link for the recording on Zoom and copy/paste the link into your proposal document/packet)</h3>
 </section>
 </body>
 </html>
