--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -12,13 +12,17 @@
 </head>
 
 <body>
-	<header>
+  <header>
     <h1>Systems Designs and Prototypes</h1>
 	<h3><a href="index.html">Proposal</a></h3>
   </header>
   <section>
 	  <h3>Entity-Relationship Diagram</h3>
 	  <img src="CapstoneERD.drawio.png" alt="Story Analyzer ERD">
-</section>
+  </section>
+	 <section>
+	 <h3> Sketch </h3>
+	 <img src="sketch.jpg" alt="Story Analyzer Homepage">
+	</section>
 </body>
 </html>
