--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1>Story Analyzer Proposal</h1>
+  <h1>Story Analyzer Proposal - Team CISMAD</h1>
   <p><a href="Bios.html">Team Member Bios</a></p>
   <p><a href="SystemsDesigns.html">Systems Designs</a></p>
     <section>
