--- a/Bios.html
+++ b/Bios.html
@@ -80,9 +80,9 @@ aside{
   </section>
   <section>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Team Member: Devin Storey</li>
+      <li>Major: Interactive Design</li>
+      <li>Expected Role: UI/UX, User Research</li>
      </ul>
   </section>
   <section>
