--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -2,8 +2,13 @@
 <html lang="en">
 
 <Head>
-<meta charset="utf-8">
-  <title>Systems Designs and Prototypes</Title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+
+<title>Systems Designs and Prototypes</Title>
   <style>
     h1{
      Text-align: center; 
