--- a/Bios.html
+++ b/Bios.html
@@ -91,9 +91,9 @@ aside{
   </section>
   <section>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Team Member: Derek Cochrane </li>
+      <li>Targeted Position: Web Developer</li>
+      <li>Role: Developer</li>
      </ul>
   </section>
 </body>
