--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-
+body{
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+}
+h1{
+  Text-align: center;
+}
+aside{
+  float: right;
+  width: 300px;
+}
 
 </head>
 
