--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+<style>
 body{
   margin-right: auto;
   margin-left: auto;
@@ -20,7 +21,7 @@ aside{
   float: right;
   width: 300px;
 }
-
+</style>
 </head>
 
 <body>
