--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -9,11 +9,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 
 <title>Systems Designs and Prototypes</Title>
-  <style>
-    h1{
-     Text-align: center; 
-    }
-  </style>
+ <style>
+body{
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+}
+h1{
+  Text-align: center;
+}
+aside{
+  float: right;
+  width: 300px;
+}
+</style>
 </head>
 
 <body>
