--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE HTML>
+<html lang="en">
 
+<Head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+<style>
+body{
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+}
+h1{
+  Text-align: center;
+}
+aside{
+  float: right;
+  width: 300px;
+}
+</style>
+</head>
+
+<body>
+  
+  </body>
