--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@ aside{
 </head>
 
 <body>
-  
-  </body>
+  <p><a href="StoryAnalyzer-CISMAD-proposal.html">Story Analyzer Proposal</a></p>
+</body>
