--- a/Bios.html
+++ b/Bios.html
@@ -33,6 +33,10 @@ aside{
   <aside>
 	  
   </aside>
+	<h2> Our Team </h2>
+	<img src="Team CISMAD" alt="Our Team">
+	<p> From top left to right: Jenna Johnson, Anna Bonner, Melad Saleh, Tommy Ellis, Toriana Rollins, Devin Storey,
+		Skyler Benson, Derek Cochrane, Cullen Bowles </p>
   <section>
     <ul>
       <li>Team Member: Melad Saleh</li>
