--- a/Bios.html
+++ b/Bios.html
@@ -34,7 +34,7 @@ aside{
 	  
   </aside>
 	<h2> Our Team </h2>
-	<img src="Team CISMAD" alt="Our Team">
+	<img src="Team CISMAD.png" alt="Our Team">
 	<p> From top left to right: Jenna Johnson, Anna Bonner, Melad Saleh, Tommy Ellis, Toriana Rollins, Devin Storey,
 		Skyler Benson, Derek Cochrane, Cullen Bowles </p>
   <section>
