--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -38,6 +38,10 @@ aside{
 	 <h3> Sketch </h3>
 	 <img src="sketch.jpg" alt="Story Analyzer Homepage">
 	</section>
+	<section>
+		<h3> Wireframes and Prototype </h3>
+		<a href="https://xd.adobe.com/view/eebc7c68-f976-444d-bfcf-3a39457339fd-bbef/?fullscreen">View our Low-fidelity Prototype Here</a>
+	</section>
 </body>
     <!-- Optional JavaScript; choose one of the two! -->
 
