--- a/SystemsDesigns.html
+++ b/SystemsDesigns.html
@@ -40,7 +40,7 @@ aside{
 	</section>
 	<p>
 		<h3> Wireframes and Prototype </h3>
-		<a href="https://xd.adobe.com/view/eebc7c68-f976-444d-bfcf-3a39457339fd-bbef/?fullscreen">View our Low-fidelity Prototype Here</a>
+		<a href="https://xd.adobe.com/view/eebc7c68-f976-444d-bfcf-3a39457339fd-bbef/?fullscreen" target="_blank">View our Low-fidelity Prototype Here</a>
 	</p>
 </body>
     <!-- Optional JavaScript; choose one of the two! -->
